--- a/_config.yml
+++ b/_config.yml
@@ -53,10 +53,11 @@ metadata: "cb_metadata_archivojosepinorivera1"
 # leave these blank or comment out to NOT include google code. See docs/google.md
 #
 # Add your google-analytics-id to automatically add the embed code, e.g. "G-123XXXXXX"
- google-analytics-id: "G-M91YZTBJM8"
+ google-analytics-id: G-M91YZTBJM8
+ google-site-verification: google88074463601a9ba5
 # to populate a Google CSE add the id, e.g. "002151703305773322890:1pu3smhw1t8"
 # google-cse-id: 
-
+ 
 ##########
 # ROBOTS EXCLUDE
 #
