--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,10 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # title of site appears in banner
 title: Archivo documental de José Pino Rivera 
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Memoria digital de la vida profesional de un agente forestal en la provincia de Málaga (1958 - 2002).
+tagline: Memoria digital de la vida profesional de un agente forestal en la provincia de Málaga.
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: Este archivo digital se crea para poner a disposición de investigadores, profesionales y personas interesadas un original acervo documental, memoria de un periodo de gran actividad forestal en la provincia de Málaga.
+description: Este archivo digital se crea para poner a disposición de investigadores, profesionales y personas interesadas un original acervo documental, memoria de un periodo de gran actividad forestal en la provincia de Málaga, la segunda mitad del siglo XX.
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Dr. José Pino-Díaz
 
