--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # title of site appears in banner
 title: Archivo documental de José Pino Rivera 
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Memoria digital de la vida profesional de un agente forestal en la provincia de Málaga.
+tagline: Memoria digital de la vida profesional de un forestal en la provincia de Málaga.
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: Este archivo digital se crea para poner a disposición de investigadores, profesionales y personas interesadas un original acervo documental, memoria de un periodo de gran actividad forestal en la provincia de Málaga, la segunda mitad del siglo XX.
